ms-payments: fix smell codes